2002-07-11  Koji Arai  <jca02266@nifty.ne.jp>

	* tests/Makefile.am (EXTRA_DIST): lha-test9 and lha-test10 were missed.

	* src/lharc.c (print_tiny_usage): no exit here.

	* src/header.c (ConvertEncodingByIconv): newly added.
	Thanks to Hiroto Sakai.

	* configure.ac, config.h.in: Checking to have iconv() for utf-8
	conversion.

	* configure.ac: Checking whether strrchr() is 8 bit clean or not.
	On Mac OS X, strchr() can handle 8 bit characters, but strrchr()
	cannot.
	Should use '\377' rather than '\xff' for de-ANSI compiler.

2002-07-10  Koji Arai  <jca02266@nifty.ne.jp>

	* released.

	* configure.ac: updated version.

	* src/header.c: change hex codes '\xff' to octal codes '\377'.

	* tests/lha-test.in: Skip the lha-test9. (this test is imcomplete
	for now)

	* tests/lha-test10: Should extract directory even if the archive
	header was level 0.

	* src/header.c (get_header): Should convert kanji code and path
	separator for the level 0 header entry.
	Should convert `\' to `/' for level 0 header (do always to make sure,
	SO CANNOT CONTAIN THE `\' IN FILENAME).
	(init_header): Should not convert path separator here (Should do
	in write_header()).
	(write_header): Did not contain the directory part in level 0
	archive.

2002-07-09  Koji Arai  <jca02266@nifty.ne.jp>

	* src/lha.h, src/header.c: the CoreFoundation header inclusion
	moved to header.c.

	* src/lha.h, src/lharc.c, IFNAMES: macro NODIRECTORY was removed.

	* src/lha.h, src/lhadd.c, src/lharc.c, src/lhext.c: fixed
	misspelling, not `writting' but `writing'.

2002-07-07  Koji Arai  <jca02266@nifty.ne.jp>

	* src/lha.h, src/lha_macro.h: refined.

	* src/lhadd.c (append_it): macro STRING_COMPARE() was discarded.

	* src/lha_macro.h: ditto.

	* IFNAMES: NOVOID was removed.

	* src/lharc.c (main): terminate with exit status 2 when specified
	command line switche is wrong,

	* configure.ac, config.h.in: added checking utime.h existent.

	* src/crcio.c (putc_euc): void returned.
