@@ -1,6 +1,6 @@
 #!/bin/sh
 
-exec > prototypes.h
+exec > prototypes.h.tmp
 
 cat <<END
 /* This file was generated by cproto. */
@@ -14,6 +14,7 @@ END
 
 cproto -m -d \
 	-D STDC_HEADERS=1 -D HAVE_STRDUP=0 -D HAVE_MEMSET=0 -D HAVE_MEMMOVE=0 \
+	-D MULTIBYTE_FILENAME=1 \
 	append.c crcio.c dhuf.c extract.c header.c \
 	huf.c larc.c lhadd.c lharc.c lhext.c \
 	lhlist.c maketbl.c maketree.c patmatch.c \
@@ -42,3 +43,6 @@ int snprintf P_((char *str, size_t n, char const *fmt, ...));
 
 #undef P_
 END
+
+exec >&-
+mv prototypes.h.tmp prototypes.h
